--- a/EventLoop-Asincronicidad/Practica1.css
+++ b/EventLoop-Asincronicidad/Practica1.css
@@ -266,6 +266,24 @@ body{
     background: linear-gradient(to right, #76b852, #8dc26f);
     border: solid 1px black;
     box-shadow: 0px 0px 25px 5px rgba(0,0,0,0.75);
+    overflow: hidden ;
+    padding: 5px;
+}
+
+#events-container .order-item .event-area .selected-items{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 2%;
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 500;
+}
+
+#events-container .order-item .event-area .selected-items button{
+    color: red;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 /*Diseño de footer */
