--- a/Callbacks-JSON/Practica2.css
+++ b/Callbacks-JSON/Practica2.css
@@ -5,9 +5,50 @@
 }
 
 body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    height: 100vh;
 }
 
+header{
+    grid-area: 1 / 1 / 2 / 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section{
+    grid-area: 2 / 1 / 7 / 2;
+}
+
+#buttons-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+}
+
+
+#form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+}
+
+#container{
+    grid-area: 2 / 2 / 7 / 5; 
+    width: 80%;
+    margin: 0 10%;
+    border-radius: 25px;
+    overflow: scroll;
+}
+
+.hidden{
+    display: none !important;
+}
