--- a/Fetch-Axios/Practica3.css
+++ b/Fetch-Axios/Practica3.css
@@ -17,6 +17,7 @@ header{
     padding: 2% 1%;
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 header h1{
@@ -37,7 +38,7 @@ main{
 
 #buttons-container{
     grid-area: 1 / 1 / 2 / 3;
-    padding-top: 1rem;
+    padding-top: 15px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -67,7 +68,43 @@ main{
     border: solid 1px rgb(189, 220, 64);
     border-radius: 10px;
     box-shadow: 0px 0px 50px 5px rgba(189,220,64,1);
-    margin-top: 2rem;
+    margin-top: 15px;
     width: 90%;
     min-height: 300px;
+    max-height: 70vh;
+    overflow: scroll;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card{
+    width: 95%;
+    padding: 5%;
+    border: solid 1px black;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5px;
+}
+
+.card img{
+    width: 100%;
+}
+
+.card div{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.card h2{
+    color: black;
+    font-size: x-large;
+}
+
+.card p{
+    font-size: small;
 }
